RESOLVED FIXED73398
missing RuntimeEnabled check for <track>
https://bugs.webkit.org/show_bug.cgi?id=73398
Summary missing RuntimeEnabled check for <track>
Anna Cavender
Reported 2011-11-29 22:08:05 PST
Found one more runtime check missing when <track> might be removed from the DOM.
Attachments
Patch (1.43 KB, patch)
2011-11-29 22:12 PST, Anna Cavender
eric.carlson: review+
Anna Cavender
Comment 1 2011-11-29 22:12:28 PST
Anna Cavender
Comment 2 2011-11-30 08:15:35 PST
Note You need to log in before you can comment on or make changes to this bug.