third_party/WebKit/Source/WebCore/html/HTMLMediaElement.cpp
@@ -2187,6 +2187,9 @@ void HTMLMediaElement::trackWasAdded(HTMLTrackElement* trackElement)
  
 void HTMLMediaElement::trackWillBeRemoved(HTMLTrackElement* trackElement)
 {
+    if (!RuntimeEnabledFeatures::webkitVideoTrackEnabled())
+        return;
+
 #if !LOG_DISABLED
     if (trackElement->hasTagName(trackTag)) {
         KURL url = trackElement->getNonEmptyURLAttribute(srcAttr);
